--- a/LambdaTimeline/Storyboards/Base.lproj/Main.storyboard
+++ b/LambdaTimeline/Storyboards/Base.lproj/Main.storyboard
@@ -22,16 +22,75 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImagePostCell" id="D2w-EO-7kG" customClass="ImagePostCollectionViewCell" customModule="LambdaTimeline" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImagePostCell" id="Q6i-Vz-ybU" customClass="ImagePostCollectionViewCell" customModule="LambdaTimeline" customModuleProvider="target">
                                 <rect key="frame" x="19.666666666666668" y="0.0" width="375" height="375"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cGr-Ya-osY">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FVk-cv-bcj">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
                                         </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oYI-Dt-q5S">
+                                            <rect key="frame" x="8" y="329.33333333333331" width="47" height="37.666666666666686"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="2gC-n8-0kP">
+                                                    <rect key="frame" x="8" y="4.0000000000000018" width="31" height="29.666666666666671"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qCc-wt-Vwf">
+                                                            <rect key="frame" x="0.0" y="0.0" width="31" height="14.333333333333334"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="B98-T4-ciY">
+                                                            <rect key="frame" x="0.0" y="16.333333333333371" width="31" height="13.333333333333336"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.59806888199999997" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="2gC-n8-0kP" firstAttribute="top" secondItem="oYI-Dt-q5S" secondAttribute="top" constant="4" id="96S-pI-gfE"/>
+                                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="128" id="EVg-Fc-mKJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="2gC-n8-0kP" secondAttribute="trailing" constant="8" id="Plc-5c-BDG"/>
+                                                <constraint firstItem="2gC-n8-0kP" firstAttribute="leading" secondItem="oYI-Dt-q5S" secondAttribute="leading" constant="8" id="Q8n-TZ-Iih"/>
+                                                <constraint firstAttribute="bottom" secondItem="2gC-n8-0kP" secondAttribute="bottom" constant="4" id="n5h-pr-zag"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="FVk-cv-bcj" secondAttribute="trailing" id="2MD-g3-Y9l"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="oYI-Dt-q5S" secondAttribute="bottom" id="3RT-Hz-Xdp"/>
+                                    <constraint firstItem="FVk-cv-bcj" firstAttribute="leading" secondItem="Q6i-Vz-ybU" secondAttribute="leading" id="Fnp-rz-ELB"/>
+                                    <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="oYI-Dt-q5S" secondAttribute="trailing" id="Mpz-eF-87s"/>
+                                    <constraint firstItem="FVk-cv-bcj" firstAttribute="top" secondItem="Q6i-Vz-ybU" secondAttribute="top" id="Shn-hV-CNi"/>
+                                    <constraint firstAttribute="bottom" secondItem="FVk-cv-bcj" secondAttribute="bottom" id="dCK-XM-kRk"/>
+                                    <constraint firstItem="oYI-Dt-q5S" firstAttribute="leading" secondItem="Q6i-Vz-ybU" secondAttribute="leadingMargin" id="sOQ-75-0Ra"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="authorLabel" destination="B98-T4-ciY" id="4vD-Wq-dtd"/>
+                                    <outlet property="imageView" destination="FVk-cv-bcj" id="Unk-9Y-jEf"/>
+                                    <outlet property="labelBackgroundView" destination="oYI-Dt-q5S" id="0Q2-G7-lHj"/>
+                                    <outlet property="titleLabel" destination="qCc-wt-Vwf" id="ioW-U6-MwY"/>
+                                </connections>
+                            </collectionViewCell>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VideoPostCell" id="D2w-EO-7kG" customClass="VideoCollectionViewCell" customModule="LambdaTimeline" customModuleProvider="target">
+                                <rect key="frame" x="19.666666666666668" y="385" width="375" height="375"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DQ3-Ob-dpK" customClass="VideoPlayerView" customModule="LambdaTimeline" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5zZ-2z-oK0">
                                             <rect key="frame" x="8" y="329.33333333333331" width="47" height="37.666666666666686"/>
                                             <subviews>
@@ -66,18 +125,18 @@
                                 </view>
                                 <constraints>
                                     <constraint firstAttribute="bottomMargin" secondItem="5zZ-2z-oK0" secondAttribute="bottom" id="1LF-Zp-TnU"/>
-                                    <constraint firstAttribute="bottom" secondItem="cGr-Ya-osY" secondAttribute="bottom" id="8bl-dP-i73"/>
                                     <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="5zZ-2z-oK0" secondAttribute="trailing" id="EYP-IW-bcG"/>
-                                    <constraint firstAttribute="trailing" secondItem="cGr-Ya-osY" secondAttribute="trailing" id="HpT-dP-6Xk"/>
+                                    <constraint firstItem="DQ3-Ob-dpK" firstAttribute="leading" secondItem="D2w-EO-7kG" secondAttribute="leading" id="FK5-Pe-AMS"/>
                                     <constraint firstItem="5zZ-2z-oK0" firstAttribute="leading" secondItem="D2w-EO-7kG" secondAttribute="leadingMargin" id="azp-pe-INC"/>
-                                    <constraint firstItem="cGr-Ya-osY" firstAttribute="leading" secondItem="D2w-EO-7kG" secondAttribute="leading" id="hdc-84-c5s"/>
-                                    <constraint firstItem="cGr-Ya-osY" firstAttribute="top" secondItem="D2w-EO-7kG" secondAttribute="top" id="xxs-11-ALu"/>
+                                    <constraint firstAttribute="trailing" secondItem="DQ3-Ob-dpK" secondAttribute="trailing" id="d5o-BY-XaL"/>
+                                    <constraint firstAttribute="bottom" secondItem="DQ3-Ob-dpK" secondAttribute="bottom" id="f8a-q3-lEj"/>
+                                    <constraint firstItem="DQ3-Ob-dpK" firstAttribute="top" secondItem="D2w-EO-7kG" secondAttribute="top" id="odP-qn-pct"/>
                                 </constraints>
                                 <connections>
-                                    <outlet property="authorLabel" destination="zag-e4-p07" id="cid-TM-VAw"/>
-                                    <outlet property="imageView" destination="cGr-Ya-osY" id="FWp-BM-0Cr"/>
+                                    <outlet property="authorLabel" destination="zag-e4-p07" id="Ic0-Vf-StB"/>
                                     <outlet property="labelBackgroundView" destination="5zZ-2z-oK0" id="XjC-Of-Yj5"/>
-                                    <outlet property="titleLabel" destination="tHt-lC-hYm" id="uRt-J9-5cc"/>
+                                    <outlet property="titleLabel" destination="tHt-lC-hYm" id="pU7-Ky-YAQ"/>
+                                    <outlet property="videoPlayerView" destination="DQ3-Ob-dpK" id="zaZ-g5-CFW"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
